--- a/src/DemoBlazorTheme.Lib/DemoBlazorTheme.Lib.csproj
+++ b/src/DemoBlazorTheme.Lib/DemoBlazorTheme.Lib.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.33" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
