--- a/src/DemoBlazorTheme.Web/DemoBlazorTheme.Web.csproj
+++ b/src/DemoBlazorTheme.Web/DemoBlazorTheme.Web.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\DemoBlazorTheme.Lib\DemoBlazorTheme.Lib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="6.21.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
