--- a/src/DemoBlazorTheme.Lib/DemoBlazorTheme.Lib.csproj
+++ b/src/DemoBlazorTheme.Lib/DemoBlazorTheme.Lib.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.33" />
+    <PackageReference Include="MudBlazor" Version="6.21.0" />
   </ItemGroup>
 
 </Project>
